--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/mapbox-gl": "^3.4.1",
     "@vis.gl/react-google-maps": "^1.7.1",
+    "canvas-confetti": "^1.9.4",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.24.7",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.17.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-map-gl": "^8.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
